API 관리 추가 및 REST API 익스큐터 추가

--- a/danusys-guardian-platform/src/main/resources/application-local.properties
+++ b/danusys-guardian-platform/src/main/resources/application-local.properties
@@ -52,10 +52,23 @@ danusys.ttl.svr.port=2486
 
 
 
+#-----------------------------------------------------------------------------
+# Rest Api String
+# body data get api
+# ex : body, result
+#-----------------------------------------------------------------------------
+danusys.rest.api.body.name=body
+danusys.client.db_charset=EUC-KR
+danusys.api.inout.log=false
+danusys.api.inout.log.key=1234567890123456
+danusys.api.inout.log.encryption=false
+
+
+
 logging.level.root=info
-logging.level.org.springframework.web=trace
+logging.level.org.springframework.web=info
 logging.level.com.danusys.guardian=trace
-logging.level.org.postgresql=trace
+logging.level.org.postgresql=info
 
 #logging.level.org.springframework.jdbc=debug
 #logging.level.org.hibernate=warn
@@ -63,3 +76,5 @@ logging.level.org.postgresql=trace
 #logging.level.org.hibernate.type.descriptor.sql=trace
 
 #spring.jackson.serialization.fail-on-empty-beans=false
+
+
