API 파라미터 조회 1번만 하도록 수정

--- a/danusys-guardian-platform/src/main/resources/application-dev.properties
+++ b/danusys-guardian-platform/src/main/resources/application-dev.properties
@@ -53,9 +53,9 @@ danusys.ttl.svr.port=2486
 
 
 logging.level.root=info
-logging.level.org.springframework.web=trace
+logging.level.org.springframework.web=info
 logging.level.com.danusys.guardian=trace
-logging.level.org.postgresql=trace
+logging.level.org.postgresql=info
 
 #logging.level.org.springframework.jdbc=debug
 #logging.level.org.hibernate=warn
@@ -63,3 +63,5 @@ logging.level.org.postgresql=trace
 #logging.level.org.hibernate.type.descriptor.sql=trace
 
 #spring.jackson.serialization.fail-on-empty-beans=false
+
+
