--- a/danusys-guardian-platform/src/main/resources/application-local.properties
+++ b/danusys-guardian-platform/src/main/resources/application-local.properties
@@ -57,11 +57,11 @@ danusys.ttl.svr.port=2486
 # body data get api
 # ex : body, result
 #-----------------------------------------------------------------------------
-danusys.rest.api.body.name=body
-danusys.client.db_charset=EUC-KR
-danusys.api.inout.log=false
-danusys.api.inout.log.key=1234567890123456
-danusys.api.inout.log.encryption=false
+#danusys.rest.api.body.name=body
+#danusys.client.db_charset=EUC-KR
+#danusys.api.inout.log=false
+#danusys.api.inout.log.key=1234567890123456
+#danusys.api.inout.log.encryption=false
 
 
 
