--- a/danusys-guardian-platform/src/main/resources/application-dev.properties
+++ b/danusys-guardian-platform/src/main/resources/application-dev.properties
@@ -7,8 +7,8 @@ server.port=8082
 #spring.datasource.password=
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://172.20.20.201:5432/gh_yj
-spring.datasource.username=gh_yj
+spring.datasource.url=jdbc:postgresql://172.20.20.201:5432/gm
+spring.datasource.username=gm
 spring.datasource.password=Danu1002!!
 
 #mybatis.type-aliases-package=com.danusys.guardian.model
