--- a/danusys-platform/pom.xml
+++ b/danusys-platform/pom.xml
@@ -181,7 +181,28 @@
 			<version>3.6.0</version>
 		</dependency>
 
-<!--		<dependency>-->
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>openlayers</artifactId>
+			<version>3.20.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>proj4js</artifactId>
+			<version>2.2.1-1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.webjars.bower</groupId>
+			<artifactId>moment</artifactId>
+			<version>2.29.1</version>
+		</dependency>
+
+
+
+
+		<!--		<dependency>-->
 <!--			<groupId>egovframework.rte</groupId>-->
 <!--			<artifactId>egovframework.rte.fdl.excel</artifactId>-->
 <!--			<version>${egovframework.rte.version}</version>-->
