--- a/danusys-platform/src/main/resources/application-dev.properties
+++ b/danusys-platform/src/main/resources/application-dev.properties
@@ -15,7 +15,7 @@ spring.datasource.password=Danu1002!!
 mybatis.mapper-locations=/mapper/**/*.xml
 
 
-danusys.path.root=/Users/kai
+danusys.path.root=${user.home}
 danusys.file.upload.path=/dev/upload
 danusys.page.unit=10
 danusys.sso.login=UCP
