드론관제 pom 수정

--- a/danusys-drone/src/main/resources/application-local.properties
+++ b/danusys-drone/src/main/resources/application-local.properties
@@ -1,3 +1,6 @@
 server.port=8083
 
-
+logging.level.root=info
+logging.level.org.springframework.web=info
+logging.level.com.danusys.web=trace
+logging.level.org.postgresql=info
