--- a/danusys-drone/pom.xml
+++ b/danusys-drone/pom.xml
@@ -10,18 +10,24 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>danusys-drone</artifactId>
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
 
     <dependencies>
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
 
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-test</artifactId>
-        <scope>test</scope>
-    </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
 
 
 
@@ -37,7 +43,20 @@
             <artifactId>mavlink-protocol</artifactId>
             <version>1.1.9</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.mavsdk/mavsdk -->
+        <dependency>
+            <groupId>io.mavsdk</groupId>
+            <artifactId>mavsdk</artifactId>
+            <version>0.11.0</version>
+        </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>com.github.ghelle</groupId>-->
+<!--            <artifactId>MAVLinkJava</artifactId>-->
+<!--        </dependency>-->
     </dependencies>
+
+
 
 
 	<build>
