--- a/danusys-platform/src/main/resources/application-dev.properties
+++ b/danusys-platform/src/main/resources/application-dev.properties
@@ -11,11 +11,23 @@ spring.datasource.url=jdbc:postgresql://172.20.20.201:5432/gm
 spring.datasource.username=gm
 spring.datasource.password=Danu1002!!
 
-#mybatis.type-aliases-package=com.danusys.web.model
-mybatis.mapper-locations=/mapper/**/*.xml
+#mybatis.type-aliases-package=com.danusys.web.platform.model
+#mybatis.mapper-locations=/mapper/**/*.xml
+
+spring.jpa.database=postgresql
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.generate-ddl=false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
+spring.jpa.properties.hibernate.use_sql_comments=false
+#\uCFFC\uB9AC\uBB38\uC758 \uD30C\uB77C\uBBF8\uD130
+logging.level.org.hibernate.type.descriptor.sql=trace
 
 
-danusys.path.root=${user.home}
+
+danusys.path.root=/Users/kai
 danusys.file.upload.path=/dev/upload
 danusys.page.unit=10
 danusys.sso.login=UCP
@@ -53,15 +65,10 @@ danusys.ttl.svr.port=2486
 
 
 logging.level.root=info
-logging.level.org.springframework.web=info
 logging.level.com.danusys.web=trace
-logging.level.org.postgresql=info
+#logging.level.org.springframework.web=info
+#logging.level.org.springframework.jdbc=info
+#logging.level.org.postgresql=error
 
-#logging.level.org.springframework.jdbc=debug
-#logging.level.org.hibernate=warn
-#logging.level.org.hibernate.SQL=debug
-#logging.level.org.hibernate.type.descriptor.sql=trace
-
-#spring.jackson.serialization.fail-on-empty-beans=false
-
-
+#logging.level.org.hibernate=trace
+#logging.level.org.hibernate.SQL=trace
