--- a/danusys-platform/pom.xml
+++ b/danusys-platform/pom.xml
@@ -15,6 +15,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.danusys.web</groupId>
+			<artifactId>danusys-commons-ui</artifactId>
+			<version>${revision}</version>
+		</dependency>
 <!--		<dependency>-->
 <!--			<groupId>org.springframework.boot</groupId>-->
 <!--			<artifactId>spring-boot-starter-data-jdbc</artifactId>-->
