--- a/danusys-drone/pom.xml
+++ b/danusys-drone/pom.xml
@@ -24,36 +24,41 @@
         </dependency>
 
         <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgresql.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.danusys.web</groupId>
+            <artifactId>danusys-commons-api</artifactId>
+            <version>${revision}</version>
+        </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
 
-        <!-- https://mvnrepository.com/artifact/io.dronefleet.mavlink/mavlink -->
         <dependency>
             <groupId>io.dronefleet.mavlink</groupId>
             <artifactId>mavlink</artifactId>
             <version>1.1.9</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/io.dronefleet.mavlink/mavlink-protocol -->
         <dependency>
             <groupId>io.dronefleet.mavlink</groupId>
             <artifactId>mavlink-protocol</artifactId>
             <version>1.1.9</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/io.mavsdk/mavsdk -->
-<!--        <dependency>-->
-<!--            <groupId>io.mavsdk</groupId>-->
-<!--            <artifactId>mavsdk</artifactId>-->
-<!--            <version>0.11.0</version>-->
-<!--        </dependency>-->
 
-<!--        <dependency>-->
-<!--            <groupId>com.github.ghelle</groupId>-->
-<!--            <artifactId>MAVLinkJava</artifactId>-->
-<!--        </dependency>-->
     </dependencies>
 
 
