마브링크 이륙 & 미션 테스트 진행중

--- a/danusys-drone/pom.xml
+++ b/danusys-drone/pom.xml
@@ -76,6 +76,13 @@
             <version>${revision}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
 
