--- a/danusys-commons-auth/pom.xml
+++ b/danusys-commons-auth/pom.xml
@@ -10,14 +10,37 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>danusys-commons-auth</artifactId>
-
+    <!-- 스타트웹, jpa  -->
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.danusys.web</groupId>
+            <artifactId>danusys-commons-ui</artifactId>
+            <version>${revision}</version>
+        </dependency>
+
+        <!--   스타트웹, jpa 끝  -->
+        <!-- 롬복,다누시스웹 -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
         <dependency>
             <groupId>com.danusys.web</groupId>
             <artifactId>danusys-commons-util</artifactId>
             <version>${revision}</version>
         </dependency>
-
+        <!-- 롬복,다누시스웹  끝 -->
+        <!-- 시큐리티 ouath  jwt start -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
@@ -29,6 +52,35 @@
             <version>2.5.1.RELEASE</version>
         </dependency>
 
+
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-impl</artifactId>
+            <version>0.11.2</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-api</artifactId>
+            <version>0.11.2</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-jackson</artifactId>
+            <version>0.11.2</version>
+        </dependency>
+
+        <!-- 시큐리티 ouath jwt end-->
+        <!-- postgresql-->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgresql.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
