--- a/danusys-commons-auth/pom.xml
+++ b/danusys-commons-auth/pom.xml
@@ -52,7 +52,11 @@
             <version>2.5.1.RELEASE</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.18.2</version>
+        </dependency>
 
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
