--- a/danusys-platform/src/main/resources/application-dev.properties
+++ b/danusys-platform/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@ server.port=8082
 # h2 \uB4DC\uB77C\uC774\uBC84 \uC124\uC815
 #spring.datasource.driver-class-name=org.h2.Driver
 #spring.datasource.url=jdbc:h2:~/test
-#spring.datasource.username=sa
+#spring.datasource.username=saadmin
 #spring.datasource.password=
 
 spring.datasource.driver-class-name=org.postgresql.Driver
