--- a/danusys-drone/src/main/resources/application-local.properties
+++ b/danusys-drone/src/main/resources/application-local.properties
@@ -17,8 +17,12 @@ spring.jpa.properties.hibernate.use_sql_comments=false
 logging.level.org.hibernate.type.descriptor.sql=trace
 
 
-logging.level.root=info
-logging.level.com.danusys.web=trace
+tcp.server.host=172.20.14.84
+tcp.server.port=14550
+
+
+#logging.level.root=trace
+#logging.level.com.danusys.web=trace
 #logging.level.org.springframework.web=info
 #logging.level.org.springframework.jdbc=info
 #logging.level.org.postgresql=error
