ui & auth 나누기 v1

--- a/danusys-commons-auth/src/main/resources/application.properties
+++ b/danusys-commons-auth/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 secret.key=asdasdasdqweqweqsd11231231231231adad23123123261412341234
 
 
-## 1000* 10
- access.token.expire.time= 10000
-## 1000 * 60 * 60 *24 * 7
-refresh.token.expire.time= 60480000
+## 1000* 60 * 10
+ access.token.expire.time= 600000
+## 1000 * 60 * 20
+ refresh.token.expire.time= 1200000
 
 
 
@@ -12,10 +12,12 @@ permit.all.page=/hitest,/js/**,/css/**,/webjars/**,/auth/**,/login/**,/font/**,/
 
 role.manager.page=/resources/**,/test/**,/api/**,/aepel/**,/hi,/favicon.ico,/selectNoSession/**,/file/**,/sound/**,/svg/**,/ui/**
 
+role.admin.page=/hitest2\
+     ,/mntr/**
 ##role.user.page=/pages/**
 
 ##role.admin.page=/admin/**
-role.admin.page=/admin/**
+
 
 
 
