한번에 드론정보 내려주기

--- a/danusys-drone/src/main/resources/application-local.properties
+++ b/danusys-drone/src/main/resources/application-local.properties
@@ -20,9 +20,8 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 tcp.server.host=172.20.14.84
 tcp.server.port=14550
 
-
-#logging.level.root=trace
-#logging.level.com.danusys.web=trace
+logging.level.root=info
+logging.level.com.danusys.web=trace
 #logging.level.org.springframework.web=info
 #logging.level.org.springframework.jdbc=info
 #logging.level.org.postgresql=error
