--- a/danusys-drone/src/main/resources/application-dev.properties
+++ b/danusys-drone/src/main/resources/application-dev.properties
@@ -17,6 +17,9 @@ spring.jpa.properties.hibernate.use_sql_comments=false
 logging.level.org.hibernate.type.descriptor.sql=trace
 
 
+tcp.server.host=172.20.14.84
+tcp.server.port=14550
+
 logging.level.root=info
 logging.level.com.danusys.web=trace
 #logging.level.org.springframework.web=info
