--- a/danusys-commons-auth/src/main/resources/application.properties
+++ b/danusys-commons-auth/src/main/resources/application.properties
@@ -2,30 +2,28 @@ secret.key=asdasdasdqweqweqsd11231231231231adad23123123261412341234
 
 
 ## 1000* 60 * 10
- access.token.expire.time= 600000
+## access.token.expire.time= 600000
+access.token.expire.time= 6000000
 ## 1000 * 60 * 20
- refresh.token.expire.time= 1200000
+## refresh.token.expire.time= 1200000
+refresh.token.expire.time= 12000000
 
 
 
-permit.all.page=/hitest,/js/**,/css/**,/webjars/**,/auth/**,/login/**,/font/**,/images/**
+permit.all.page=/hitest,/js/**,/css/**,/webjars/**,/ho/auth/**,/login/**,/font/**,/images/**,/mntr/**,/hi,/ho/hitest,/ho/hi,/auth/**
 
-role.manager.page=/resources/**,/test/**,/api/**,/aepel/**,/hi,/favicon.ico,/selectNoSession/**,/file/**,/sound/**,/svg/**,/ui/**
+role.manager.page=/resources/**,/test/**,/api/**,/aepel/**,/favicon.ico,/selectNoSession/**,/file/**,/sound/**,/svg/**,/ui/**
 
-role.admin.page=/hitest2\
-     ,/mntr/**
+role.admin.page=/ho/hitest2,/hitest2,
 ##role.user.page=/pages/**
 
 ##role.admin.page=/admin/**
 
 
+zuul.routes.ho.url=http://localhost:8082
+zuul.routes.ho.sensitiveHeaders=
 
-
-
-
-
-
-
+ribbon.eureka.enabled=false
 
 
 
