--- a/danusys-platform/pom.xml
+++ b/danusys-platform/pom.xml
@@ -20,13 +20,13 @@
 			<artifactId>danusys-commons-ui</artifactId>
 			<version>${revision}</version>
 		</dependency>
-		<!--
-		<dependency>
-			<groupId>com.danusys.web</groupId>
-			<artifactId>danusys-commons-auth</artifactId>
-			<version>${revision}</version>
-		</dependency>
--->
+
+<!--		<dependency>-->
+<!--			<groupId>com.danusys.web</groupId>-->
+<!--			<artifactId>danusys-commons-auth</artifactId>-->
+<!--			<version>${revision}</version>-->
+<!--		</dependency>-->
+
 <!--		<dependency>-->
 <!--			<groupId>org.springframework.boot</groupId>-->
 <!--			<artifactId>spring-boot-starter-data-jdbc</artifactId>-->
