--- a/danusys-drone/src/main/resources/application-dev.properties
+++ b/danusys-drone/src/main/resources/application-dev.properties
@@ -16,6 +16,9 @@ spring.jpa.properties.hibernate.use_sql_comments=false
 #\uCFFC\uB9AC\uBB38\uC758 \uD30C\uB77C\uBBF8\uD130
 logging.level.org.hibernate.type.descriptor.sql=trace
 
+tcp.server.host=172.20.14.84
+tcp.server.port=14550
+
 
 logging.level.root=info
 logging.level.com.danusys.web=trace
