--- a/danusys-commons-auth/src/main/resources/application.properties
+++ b/danusys-commons-auth/src/main/resources/application.properties
@@ -14,17 +14,19 @@ permit.all.page=/hitest,/js/**,/css/**,/webjars/**,/ho/auth/**,/login/**,/font/*
 
 role.manager.page=/resources/**,/test/**,/api/**,/aepel/**,/favicon.ico,/selectNoSession/**,/file/**,/sound/**,/svg/**,/ui/**
 
-role.admin.page=/ho/hitest2,/hitest2,
+role.admin.page=/ho/hitest2,/hitest2,/tokenTest
 ##role.user.page=/pages/**
 
 ##role.admin.page=/admin/**
 
-
+##zuul.ignoredServices= "*"
 zuul.routes.ho.url=http://localhost:8082
 zuul.routes.ho.sensitiveHeaders=
+##zuul.routes.css.url=http://localhost:8082
+##zuul.routes.css.sensitiveHeaders=
 
 ribbon.eureka.enabled=false
-
+##spring.security.filter-order=5
 
 
 
