commons-auth 1.1.0 with exception

--- a/danusys-commons-auth/src/main/resources/application.properties
+++ b/danusys-commons-auth/src/main/resources/application.properties
@@ -19,9 +19,9 @@ permit.all.page.basic=/js/**,/css/**,/webjars/**,/ho/auth/**,/login/**,/font/**,
 
 permit.all.page.add=/auth/generateToken,/hitest
 
-role.manager.page=/test/**
+role.manager.page=/test/**,/hi
 
-role.admin.page=/ho/hitest2,/hitest2,/tokenTest,/hi,/auth/regenerateToken
+role.admin.page=/ho/hitest2,/hitest2,/tokenTest,/auth/regenerateToken
 ##role.user.page=/pages/**
 
 ##role.admin.page=/admin/**
