--- a/danusys-drone/src/main/resources/application-local.properties
+++ b/danusys-drone/src/main/resources/application-local.properties
@@ -16,9 +16,11 @@ spring.jpa.properties.hibernate.use_sql_comments=false
 #\uCFFC\uB9AC\uBB38\uC758 \uD30C\uB77C\uBBF8\uD130
 logging.level.org.hibernate.type.descriptor.sql=trace
 
+tcp.server.host=106.244.179.242
+tcp.server.port=20011
 
-tcp.server.host=172.20.14.84
-tcp.server.port=14550
+#tcp.server.host=172.20.14.84
+#tcp.server.port=14550
 
 logging.level.root=info
 logging.level.com.danusys.web=trace
