--- a/danusys-commons-ui/pom.xml
+++ b/danusys-commons-ui/pom.xml
@@ -49,6 +49,13 @@
         </dependency>
 
         <dependency>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>axios</artifactId>
+            <version>0.21.1</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>openlayers</artifactId>
             <version>6.9.0</version>
