iot플랫폼 db 접속정보 추가

--- a/danusys-platform/src/main/resources/application-dev.properties
+++ b/danusys-platform/src/main/resources/application-dev.properties
@@ -7,7 +7,7 @@ server.port=8082
 #spring.datasource.password=
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://172.20.20.201:5432/gm
+spring.datasource.url=jdbc:postgresql://172.20.20.201:5432/iot_platform
 spring.datasource.username=gm
 spring.datasource.password=Danu1002!!
 
