--- a/danusys-platform/pom.xml
+++ b/danusys-platform/pom.xml
@@ -20,7 +20,11 @@
 			<artifactId>danusys-commons-ui</artifactId>
 			<version>${revision}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<version>2.2.1</version>
+		</dependency>
 <!--		<dependency>-->
 <!--			<groupId>com.danusys.web</groupId>-->
 <!--			<artifactId>danusys-commons-auth</artifactId>-->
@@ -185,8 +189,16 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>3.17</version>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-test</artifactId>
+        </dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+		</dependency>
 
-<!--		<dependency>-->
+		<!--		<dependency>-->
 <!--			<groupId>com.google.guava</groupId>-->
 <!--			<artifactId>guava</artifactId>-->
 <!--			<version>23.0</version>-->
