--- a/danusys-commons-auth/src/main/resources/application.properties
+++ b/danusys-commons-auth/src/main/resources/application.properties
@@ -13,22 +13,24 @@ access.token.expire.time= 9000000
 ## refresh.token.expire.time= 1200000
 refresh.token.expire.time= 12000000
 
+defaultHomeUrl=/loginpage
 
+defaultFailureUrl =/login/error
 
-permit.all.page.basic=/js/**,/css/**,/webjars/**,/ho/auth/**,/login/**,/font/**,/images/**,/mntr/**/resources/**,/api/**,/aepel/**,/favicon.ico,/selectNoSession/**,/file/**,/sound/**,/svg/**,/ui/**
+permit.all.page.basic=/js/**,/css/**,/webjars/**,/login/error,/font/**,/images/**,/mntr/**,/resources/**,/api/**,/aepel/**,/favicon.ico,/selectNoSession/**,/file/**,/sound/**,/svg/**,/ui/**
 
-permit.all.page.add=/auth/generateToken,/hitest
+permit.all.page.add=/auth/generateToken,/loginpage,/loginpage2,/hi234,/auth/**,/permitallpage
 
-role.manager.page=/test/**,/hi
+role.manager.page=/test/**,/hi,/permitmanagerpage
 
-role.admin.page=/ho/hitest2,/hitest2,/tokenTest,/auth/regenerateToken
+role.admin.page=/hitest2,/tokenTest,/auth/regenerateToken,/test2,/permitadminpage
 ##role.user.page=/pages/**
 
 ##role.admin.page=/admin/**
 
 ##zuul.ignoredServices= "*"
-zuul.routes.ho.url=http://localhost:8082
-zuul.routes.ho.sensitiveHeaders=
+##zuul.routes.ho.url=http://localhost:8082
+##zuul.routes.ho.sensitiveHeaders=
 ##zuul.routes.css.url=http://localhost:8082
 ##zuul.routes.css.sensitiveHeaders=
 
