--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 
         <module>danusys-platform</module>
         <module>danusys-drone</module>
+        <module>demo</module>
 
     </modules>
 
