--- a/pom.xml
+++ b/pom.xml
@@ -118,7 +118,12 @@
     <!-- for dependencies -->
     <dependencyManagement>
         <dependencies>
-<!--            <dependency>-->
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>2.2.1</version>
+            </dependency>
+            <!--            <dependency>-->
 <!--                <groupId>com.danusys.web</groupId>-->
 <!--                <artifactId>danusys-commons-???</artifactId>-->
 <!--                <version>${project.version}</version>-->
