--- a/danusys-drone/src/main/resources/application-dev.properties
+++ b/danusys-drone/src/main/resources/application-dev.properties
@@ -1,9 +1,16 @@
 server.port=8083
 
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://172.20.20.201:5432/gm
+#spring.datasource.username=gm
+#spring.datasource.password=Danu1002!!
+
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://172.20.20.201:5432/gm
+spring.datasource.url=jdbc:postgresql://172.20.20.201:5432/drone
 spring.datasource.username=gm
 spring.datasource.password=Danu1002!!
+
+
 
 spring.jpa.database=postgresql
 spring.jpa.show-sql=true
@@ -16,10 +23,13 @@ spring.jpa.properties.hibernate.use_sql_comments=false
 #\uCFFC\uB9AC\uBB38\uC758 \uD30C\uB77C\uBBF8\uD130
 logging.level.org.hibernate.type.descriptor.sql=trace
 
-tcp.server.host=172.20.14.87
-tcp.server.port=14550
+#tcp.server.host=172.20.14.87
+#tcp.server.port=14550
 
-#
+
+tcp.server.host=172.20.14.84
+tcp.server.port=14550
+##
 #tcp.server.host=106.244.179.242
 #tcp.server.port=20011
 
