--- a/danusys-commons-ui/pom.xml
+++ b/danusys-commons-ui/pom.xml
@@ -97,6 +97,12 @@
             <version>1.10.19</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>sweetalert2</artifactId>
+            <version>11.1.2</version>
+        </dependency>
+
         <!-- um -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
