--- a/danusys-commons-auth/src/main/resources/application.properties
+++ b/danusys-commons-auth/src/main/resources/application.properties
@@ -17,7 +17,7 @@ defaultHomeUrl=/loginpagetest
 
 defaultFailureUrl =/login/errorTest
 
-permit.all.page.basic=/js/**,/css/**,/webjars/**,/login/error,/font/**,/images/**,/mntr/**,/resources/**,/api/**,/aepel/**,/favicon.ico,/selectNoSession/**,/file/**,/sound/**,/svg/**,/ui/**
+permit.all.page.basic=/js/**,/css/**,/webjars/**,/login/error,/font/**,/images/**,/mntr/**,/resources/**,/api/**,/aepel/**,/favicon.ico,/selectNoSession/**,/file/**,/sound/**,/svg/**,/ui/**,/swagger-ui/**
 
 permit.all.page.add=/auth/generateToken,/loginpage,/loginpage2,/hi234,/auth/**,/permitallpage,/login/errorTest,/loginpagetest
 
