--- a/danusys-commons-auth/pom.xml
+++ b/danusys-commons-auth/pom.xml
@@ -62,30 +62,23 @@
             <artifactId>jjwt-api</artifactId>
             <version>0.11.2</version>
         </dependency>
-
-
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-jackson</artifactId>
             <version>0.11.2</version>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
             <version>2.2.7.RELEASE</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-dependencies</artifactId>
-            <version>2020.0.3</version>
-            <type>pom</type>
-            <scope>import</scope>
-        </dependency>
-
-
-
-
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.cloud</groupId>-->
+<!--            <artifactId>spring-cloud-dependencies</artifactId>-->
+<!--            <version>2020.0.3</version>-->
+<!--            <type>pom</type>-->
+<!--            <scope>import</scope>-->
+<!--        </dependency>-->
 
         <!-- 시큐리티 ouath jwt end-->
         <!-- postgresql-->
