--- a/danusys-platform/src/main/resources/application-dev.properties
+++ b/danusys-platform/src/main/resources/application-dev.properties
@@ -22,6 +22,15 @@ spring.jpa.properties.hibernate.use_sql_comments=false
 #\uCFFC\uB9AC\uBB38\uC758 \uD30C\uB77C\uBBF8\uD130
 logging.level.org.hibernate.type.descriptor.sql=trace
 
+#zuul.routes.dapi-kakao-com.path=/dapi-kakao-com/**
+#zuul.routes.dapi-kakao-com.url=http://dapi.kakao.com/
+#
+#zuul.routes.ssl-daumcdn-net.path=/ssl-daumcdn-net/**
+#zuul.routes.ssl-daumcdn-net.url=http://ssl.daumcdn.net/
+
+zuul.routes.map-daumcdn-net.path=/map-daumcdn-net/**
+zuul.routes.map-daumcdn-net.url=http://map.daumcdn.net/
+
 
 
 danusys.path.root=/Users/kai
