--- a/danusys-drone/src/main/resources/application-dev.properties
+++ b/danusys-drone/src/main/resources/application-dev.properties
@@ -13,7 +13,7 @@ spring.datasource.password=Danu1002!!
 
 
 spring.jpa.database=postgresql
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.hibernate.ddl-auto=none
