미션 인덱스 1->0 수정

--- a/danusys-drone/src/main/resources/application-dev.properties
+++ b/danusys-drone/src/main/resources/application-dev.properties
@@ -21,7 +21,7 @@ spring.jpa.generate-ddl=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.properties.hibernate.use_sql_comments=false
 #\uCFFC\uB9AC\uBB38\uC758 \uD30C\uB77C\uBBF8\uD130
-logging.level.org.hibernate.type.descriptor.sql=trace
+#logging.level.org.hibernate.type.descriptor.sql=trace
 
 
 #????
