--- a/danusys-drone/pom.xml
+++ b/danusys-drone/pom.xml
@@ -87,7 +87,16 @@
             <version>1.18.20</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20160212</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.4</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
@@ -139,8 +148,6 @@
             <version>2.9.2</version>
         </dependency>
     </dependencies>
-
-
 
 
     <build>
