--- a/danusys-drone/src/main/resources/application-dev.properties
+++ b/danusys-drone/src/main/resources/application-dev.properties
@@ -49,3 +49,4 @@ logging.level.com.danusys.web=trace
 
 danusys.path.root=${user.home}
 danusys.file.upload.path=/dev/upload
+danusys.file.extension=jsp,cgi,php,asp,aspx,exe,com,html,htm,cab,php3,pl,java,class,js,css
