--- a/demo/src/main/resources/application-dev.properties
+++ b/demo/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-server.port=8082
+server.port=8084
 
 # h2 \uB4DC\uB77C\uC774\uBC84 \uC124\uC815
 #spring.datasource.driver-class-name=org.h2.Driver
@@ -7,7 +7,7 @@ server.port=8082
 #spring.datasource.password=
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://172.20.20.201:5432/gm
+spring.datasource.url=jdbc:postgresql://172.20.20.201:5432/iot_platform
 spring.datasource.username=gm
 spring.datasource.password=Danu1002!!
 
@@ -72,3 +72,6 @@ logging.level.com.danusys.web=trace
 
 #logging.level.org.hibernate=trace
 #logging.level.org.hibernate.SQL=trace
+
+
+management.endpoints.web.exposure.include=*
