--- a/danusys-drone/src/main/resources/application-dev.properties
+++ b/danusys-drone/src/main/resources/application-dev.properties
@@ -50,3 +50,7 @@ logging.level.com.danusys.web=trace
 danusys.path.root=${user.home}
 danusys.file.upload.path=/dev/upload
 danusys.file.extension=jsp,cgi,php,asp,aspx,exe,com,html,htm,cab,php3,pl,java,class,js,css
+
+
+spring.boot.admin.client.url=http://localhost:8084
+management.endpoints.web.exposure.include=*
