--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -10,13 +10,25 @@
 
     <artifactId>demo</artifactId>
 
+
+
     <dependencies>
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-starter-server</artifactId>
+            <version>2.1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-server-ui</artifactId>
+            <version>2.1.2</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-       <dependency>
+        <dependency>
             <groupId>com.danusys.web</groupId>
             <artifactId>danusys-commons-auth</artifactId>
             <version>${revision}</version>
@@ -77,10 +89,10 @@
         <!--			<artifactId>spring-boot-starter-data-rest</artifactId>-->
         <!--		</dependency>-->
 
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-security</artifactId>-->
-<!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.springframework.boot</groupId>-->
+        <!--            <artifactId>spring-boot-starter-security</artifactId>-->
+        <!--        </dependency>-->
         <!--		<dependency>-->
         <!--			<groupId>org.springframework.boot</groupId>-->
         <!--			<artifactId>spring-boot-starter-validation</artifactId>-->
