--- a/danusys-drone/src/main/resources/application-dev.properties
+++ b/danusys-drone/src/main/resources/application-dev.properties
@@ -32,8 +32,8 @@ spring.jpa.properties.hibernate.use_sql_comments=false
 #tcp.server.host=172.20.14.84
 #tcp.server.port=14550
 #???
-tcp.server.host=106.244.179.242
-tcp.server.port=20011
+#tcp.server.host=106.244.179.242
+#tcp.server.port=20011
 
 
 
