--- a/danusys-drone/src/main/resources/application-dev.properties
+++ b/danusys-drone/src/main/resources/application-dev.properties
@@ -25,8 +25,8 @@ spring.jpa.properties.hibernate.use_sql_comments=false
 
 
 #????
-#tcp.server.host=172.20.14.87
-#tcp.server.port=14550
+tcp.server.host=172.20.14.87
+tcp.server.port=14550
 
 #
 #tcp.server.host=172.20.14.84
