--- a/danusys-drone/src/main/resources/application-dev.properties
+++ b/danusys-drone/src/main/resources/application-dev.properties
@@ -52,5 +52,7 @@ danusys.file.upload.path=/dev/upload
 danusys.file.extension=jsp,cgi,php,asp,aspx,exe,com,html,htm,cab,php3,pl,java,class,js,css
 
 
-spring.boot.admin.client.url=http://localhost:8084
+#spring.boot.admin.client.url=http://localhost:8084
+spring.boot.admin.client.instance.service-url=http://localhost:8084
 management.endpoints.web.exposure.include=*
+management.endpoint.shutdown.enabled=true
