파 업로드 사이즈 제한 50

--- a/danusys-commons-util/src/main/resources/application.properties
+++ b/danusys-commons-util/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 
-#
 
+spring.servlet.multipart.maxFileSize=50MB
+spring.servlet.multipart.maxRequestSize=50MB
 
 danusys.path.root=${user.home}
 danusys.file.upload.path=/dev/upload
