--- a/danusys-platform/pom.xml
+++ b/danusys-platform/pom.xml
@@ -207,6 +207,12 @@
             <version>0.30</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery-ui</artifactId>
+            <version>1.13.0</version>
+        </dependency>
+
         <!--		<dependency>-->
         <!--			<groupId>com.google.guava</groupId>-->
         <!--			<artifactId>guava</artifactId>-->
