--- a/danusys-commons-auth/src/main/resources/application.properties
+++ b/danusys-commons-auth/src/main/resources/application.properties
@@ -17,13 +17,13 @@ defaultHomeUrl=/loginpagetest
 
 defaultFailureUrl =/login/errorTest
 
-permit.all.page.basic=/js/**,/css/**,/webjars/**,/login/error,/font/**,/images/**,/mntr/**,/resources/**,/api/**,/aepel/**,/favicon.ico,/selectNoSession/**,/file/**,/sound/**,/svg/**,/ui/**,/swagger-ui/**
-
-permit.all.page.add=/auth/generateToken,/loginpage,/loginpage2,/hi234,/auth/**,/permitallpage,/login/errorTest,/loginpagetest
-
-role.manager.page=/test/**,/hi,/permitmanagerpage
-
-role.admin.page=/hitest2,/tokenTest,/auth/regenerateToken,/test2,/permitadminpage
+#permit.all.page.basic=/js/**,/css/**,/webjars/**,/login/error,/font/**,/images/**,/mntr/**,/resources/**,/api/**,/aepel/**,/favicon.ico,/selectNoSession/**,/file/**,/sound/**,/svg/**,/ui/**,/swagger-ui/**
+#
+#permit.all.page.add=/auth/generateToken,/loginpage,/loginpage2,/hi234,/auth/**,/permitallpage,/login/errorTest,/loginpagetest
+#
+#role.manager.page=/test/**,/hi,/permitmanagerpage
+#
+#role.admin.page=/hitest2,/tokenTest,/auth/regenerateToken,/test2,/permitadminpage
 ##role.user.page=/pages/**
 
 ##role.admin.page=/admin/**
