com.danusys.web.commons.util package rename to com.danusys.web.commons.app

--- a/danusys-commons-crypto/pom.xml
+++ b/danusys-commons-crypto/pom.xml
@@ -14,7 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>com.danusys.web</groupId>
-            <artifactId>danusys-commons-util</artifactId>
+            <artifactId>danusys-commons-app</artifactId>
             <version>${revision}</version>
         </dependency>
 
