--- a/danusys-commons-app/pom.xml
+++ b/danusys-commons-app/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>danusys-commons-util</artifactId>
+    <artifactId>danusys-commons-app</artifactId>
 
     <dependencies>
         <dependency>
