--- a/danusys-commons-auth/pom.xml
+++ b/danusys-commons-auth/pom.xml
@@ -23,7 +23,7 @@
 
         <dependency>
             <groupId>com.danusys.web</groupId>
-            <artifactId>danusys-commons-util</artifactId>
+            <artifactId>danusys-commons-app</artifactId>
             <version>${revision}</version>
         </dependency>
 
