user CRUD platform module -> auth module 이동

--- a/danusys-commons-auth/src/main/resources/application.properties
+++ b/danusys-commons-auth/src/main/resources/application.properties
@@ -38,31 +38,10 @@ defaultFailureUrl =/login/errorTest
 ##spring.security.filter-order=5
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.generate-ddl=true
+spring.jpa.hibernate.database=mysql
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.default_batch_fetch_size = 1000
