단기예보 api적용 (임시)

--- a/danusys-platform/src/main/resources/application-dev.properties
+++ b/danusys-platform/src/main/resources/application-dev.properties
@@ -62,6 +62,7 @@ danusys.target.ip=http://10.1.105.14:10003/api/athena/midsvr
 
 
 danusys.area.type=H
+danusys.area.code.sig=41210
 danusys.daum.api.key=KakaoAK 8a0ebda8876bb68f663ceb77b22a5a51
 danusys.daum.region.code.url=https://dapi.kakao.com/v2/local/geo/coord2regioncode.json
 
