--- a/danusys-drone/src/main/resources/application-dev.properties
+++ b/danusys-drone/src/main/resources/application-dev.properties
@@ -44,7 +44,7 @@ tcp.server.port=20011
 
 danusys.area.code.sig=41210
 
-logging.level.root=info
+logging.level.root=trace
 logging.level.com.danusys.web=trace
 #logging.level.org.springframework.web=info
 #logging.level.org.springframework.jdbc=info
