drone server 포트 변경 ,war 로 build 되게 변경

--- a/danusys-commons-auth/src/main/resources/application.properties
+++ b/danusys-commons-auth/src/main/resources/application.properties
@@ -19,8 +19,7 @@ defaultFailureUrl =/login/errorTest
 
 permit.all.page.basic=/js/**,/css/**,/webjars/**,/login/error,/font/**,/images/**,/mntr/**,/resources/**,/api/**,/aepel/**,/favicon.ico,/selectNoSession/**,/file/**,/sound/**,/svg/**,/ui/**,/swagger-ui/**,/
 
-permit.all.page.add=/auth/generateToken,/loginpage,/loginpage2,/hi234,/auth/**,/permitallpage,/login/errorTest,/loginpagetest
-#
+permit.all.page.add=/auth/generateToken,/loginpage,/loginpage2,/hi234,/auth/**,/permitallpage,/login/errorTest,/loginpagetest#
 #role.manager.page=/test/**,/hi,/permitmanagerpage
 #
 #role.admin.page=/hitest2,/tokenTest,/auth/regenerateToken,/test2,/permitadminpage
@@ -46,9 +45,9 @@ spring.jpa.hibernate.generate-ddl=true
 
 
 
-spring.jpa.database=postgresql
-#spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.generate-ddl=false
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
-spring.jpa.properties.hibernate.use_sql_comments=false
+#spring.jpa.database=postgresql
+##spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.generate-ddl=false
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
+#spring.jpa.properties.hibernate.use_sql_comments=false
