--- a/danusys-drone/src/main/resources/application-dev.properties
+++ b/danusys-drone/src/main/resources/application-dev.properties
@@ -97,6 +97,6 @@ defaultHomeUrl=/loginpagetest
 
 defaultFailureUrl =/login/errorTest
 
-permit.all.page.basic=/js/**,/css/**,/webjars/**,/login/error,/font/**,/images/**,/mntr/**,/resources/**,/api/**,/aepel/**,/favicon.ico,/selectNoSession/**,/file/**,/sound/**,/svg/**,/ui/**,/swagger-ui/**,/
+permit.all.page.basic=/js/**,/css/**,/webjars/**,/login/error,/font/**,/images/**,/mntr/**,/resources/**,/api/**,/aepel/**,/favicon.ico,/selectNoSession/**,/file/**,/sound/**,/svg/**,/ui/**,/swagger-ui/**
 
-permit.all.page.add=/auth/generateToken,/loginpage,/loginpage2,/hi234,/auth/**,/permitallpage,/login/errorTest,/loginpagetest#
+permit.all.page.add=/auth/generateToken,/loginpage,/loginpage2,/hi234,/auth/**,/permitallpage,/logn/errorTest,/loginpagetest,/
