--- a/danusys-drone/pom.xml
+++ b/danusys-drone/pom.xml
@@ -220,6 +220,12 @@
             <version>0.9.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.danusys.web</groupId>
+            <artifactId>danusys-commons-tcp</artifactId>
+            <version>0.9.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
