--- a/danusys-platform/src/main/resources/application-dev.properties
+++ b/danusys-platform/src/main/resources/application-dev.properties
@@ -113,3 +113,6 @@ permit.all.page.add=/auth/generateToken,/loginpage,/loginpage2,/hi234,/auth/**,/
 role.manager.page=/test/**,/hi,/permitmanagerpage
 
 role.admin.page=/hitest2,/tokenTest,/auth/regenerateToken,/test2,/permitadminpage
+
+## move HomePage url
+homepage.url=/pages/mntr
