--- a/danusys-platform/src/main/resources/application-dev.properties
+++ b/danusys-platform/src/main/resources/application-dev.properties
@@ -115,4 +115,8 @@ role.manager.page=/test/**,/hi,/permitmanagerpage
 role.admin.page=/hitest2,/tokenTest,/auth/regenerateToken,/test2,/permitadminpage
 
 ## move HomePage url
-homepage.url=/pages/mntr
+homePage.url=/pages/mntr
+
+## loginPage Path
+
+loginPage.path=layout/layout_login
