--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
         <module>danusys-smartMetering</module>
         <module>demo</module>
         <module>danusys-commons-mqtt</module>
+        <module>danusys-server-netty</module>
+        <module>danusys-server-socket</module>
 
     </modules>
 
