개소 & 이벤트 클러스터링 (+아이콘)

--- a/danusys-platform/src/main/resources/application-dev.properties
+++ b/danusys-platform/src/main/resources/application-dev.properties
@@ -26,14 +26,14 @@ spring.jpa.properties.hibernate.use_sql_comments=false
 
 
 #ribbon.eureka.enabled=false
-zuul.routes.dapi-kakao-com.path=/dapi-kakao-com/**
-zuul.routes.dapi-kakao-com.url=http://dapi.kakao.com/
+#zuul.routes.dapi-kakao-com.path=/dapi-kakao-com/**
+#zuul.routes.dapi-kakao-com.url=http://dapi.kakao.com/
 
-zuul.routes.ssl-daumcdn-net.path=/ssl-daumcdn-net/**
-zuul.routes.ssl-daumcdn-net.url=http://ssl.daumcdn.net/
+#zuul.routes.ssl-daumcdn-net.path=/ssl-daumcdn-net/**
+#zuul.routes.ssl-daumcdn-net.url=http://ssl.daumcdn.net/
 
-zuul.routes.t1-daumcdn-net.path=/t1-daumcdn-net/**
-zuul.routes.t1-daumcdn-net.url=http:/t1.daumcdn.net/
+#zuul.routes.t1-daumcdn-net.path=/t1-daumcdn-net/**
+#zuul.routes.t1-daumcdn-net.url=http:/t1.daumcdn.net/
 
 zuul.routes.map-daumcdn-net.path=/map-daumcdn-net/**
 zuul.routes.map-daumcdn-net.url=http://map.daumcdn.net/
