--- a/danusys-platform/src/main/resources/application-dev.properties
+++ b/danusys-platform/src/main/resources/application-dev.properties
@@ -127,4 +127,5 @@ loginPage.eng.title=Gwangmyeong Smart City IoT Platform
 loginPage.logo=login_ci_gm.svg
 
 # municipality setting
+municipality.favicon=/images/favicon/favicon_gm.ico
 municipality.name=41210000
