--- a/danusys-smartMetering/src/main/resources/application-local.properties
+++ b/danusys-smartMetering/src/main/resources/application-local.properties
@@ -5,9 +5,16 @@ server.port=8086
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+#Mybatis-Config
 #mybatis.type-aliases-package=com.danusys.smartmetering.common.dao
-#mybatis.mapper-locations=/mapper/**/*.xml
-#mybatis.config-location=classpath:mybatis-config.xml
+mybatis.mapper-locations=classpath:mapper/sql/*.xml
+mybatis.config-location=classpath:mapper/config/mybatis-config.xml
+
+#DB-config
+spring.datasource.url=jdbc:mariadb://danuservice2.kro.kr:41036/smartMeteringTest
+spring.datasource.username=root
+spring.datasource.password=danu1234
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 # API #
 api.host=http://1.233.95.230:8080/dhtest
