danusys-platform application-gm.properties 내부 IP로 수정

--- a/danusys-platform/src/main/resources/application-gm.properties
+++ b/danusys-platform/src/main/resources/application-gm.properties
@@ -1,4 +1,4 @@
-server.port=8082
+server.port=8400
 
 # h2 \uB4DC\uB77C\uC774\uBC84 \uC124\uC815
 #spring.datasource.driver-class-name=org.h2.Driver
@@ -7,7 +7,7 @@ server.port=8082
 #spring.datasource.password=
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://172.20.20.201:5432/iot_platform
+spring.datasource.url=jdbc:postgresql://192.168.14.100:5432/iot_platform
 spring.datasource.username=gm
 spring.datasource.password=Danu1002!!
 
@@ -111,6 +111,8 @@ permit.all.page.basic=/js/**,/css/**,/webjars/**,/login/error,/font/**,/images/*
 
 permit.all.page.add=/auth/generateToken,/loginpage,/loginpage2,/hi234,/auth/**,/permitAllPage,/login/errorTest,/loginpagetest,/
 role.manager.page=/test/**,/hi,/permitManagerPage
+
+role.menu.page=dashboard-/pages/dashboard/**,inqry-/pages/inqry/**,stats-/pages/config/**,config-/pages/config/**
 
 role.admin.page=/hitest2,/tokenTest,/auth/regenerateToken,/test2,/permitAdminPage
 
