--- a/danusys-drone/src/main/resources/application-dev.properties
+++ b/danusys-drone/src/main/resources/application-dev.properties
@@ -70,7 +70,7 @@ defaultFailureUrl =/
 
 permit.all.page.basic=/js/**,/css/**,/webjars/**,/login/error,/font/**,/images/**,/mntr/**,/resources/**,/api/**,/aepel/**,/favicon.ico,/selectNoSession/**,/file/**,/sound/**,/svg/**,/ui/**,/swagger-ui/**
 
-permit.all.page.add=/auth/generateToken,/auth/**,/permitAllPage,/
+permit.all.page.add=/auth/generateToken,/auth/**,/permitAllPage,/topic/**,/app/**,/
 
 role.admin.page=/hitest2,/tokenTest,/auth/regenerateToken,/test2,/permitAdminPage
 role.manager.page=/test/**,/hi,/permitManagerPage
