--- a/danusys-platform/pom.xml
+++ b/danusys-platform/pom.xml
@@ -23,7 +23,7 @@
         </dependency>
         <dependency>
             <groupId>com.danusys.web</groupId>
-            <artifactId>danusys-commons-auth</artifactId>
+            <artifactId>danusys-commons-auth-token</artifactId>
             <version>${revision}</version>
         </dependency>
         <dependency>
