--- a/danusys-commons-auth-session/pom.xml
+++ b/danusys-commons-auth-session/pom.xml
@@ -13,14 +13,14 @@
     <artifactId>danusys-commons-auth-session</artifactId>
     <!-- 스타트웹, jpa  -->
     <dependencies>
-        <dependency>
+<!--        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>com.danusys.web</groupId>
-            <artifactId>danusys-commons-app</artifactId>
+            <artifactId>danusys-commons-auth</artifactId>
             <version>${revision}</version>
         </dependency>
 
@@ -34,18 +34,20 @@
 
         <!-- 롬복,다누시스웹  끝 -->
         <!-- 시큐리티 ouath  jwt start -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
+        <!--        <dependency>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-security</artifactId>
+                </dependency>
 
-        <dependency>
-            <groupId>org.springframework.security.oauth</groupId>
-            <artifactId>spring-security-oauth2</artifactId>
-            <version>2.5.1.RELEASE</version>
-        </dependency>
 
-        <dependency>
+                <dependency>
+                    <groupId>org.springframework.security.oauth</groupId>
+                    <artifactId>spring-security-oauth2</artifactId>
+                    <version>2.5.1.RELEASE</version>
+                </dependency>
+        -->
+
+<!--        <dependency>
             <groupId>com.auth0</groupId>
             <artifactId>java-jwt</artifactId>
             <version>3.18.2</version>
@@ -67,12 +69,8 @@
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-jackson</artifactId>
             <version>0.11.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
-            <version>2.2.7.RELEASE</version>
-        </dependency>
+        </dependency>-->
+
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.cloud</groupId>-->
 <!--            <artifactId>spring-cloud-dependencies</artifactId>-->
