--- a/danusys-platform/src/main/resources/application-dev.properties
+++ b/danusys-platform/src/main/resources/application-dev.properties
@@ -12,7 +12,7 @@ spring.datasource.username=gm
 spring.datasource.password=Danu1002!!
 
 spring.jpa.database=postgresql
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.hibernate.ddl-auto=none
