--- a/danusys-smartMetering/pom.xml
+++ b/danusys-smartMetering/pom.xml
@@ -190,11 +190,11 @@
                </dependency>-->
 
 
-		<dependency>
+<!--		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-zuul</artifactId>
 			<version>2.2.7.RELEASE</version>
-		</dependency>
+		</dependency>-->
 		<!--       <dependency>
                    <groupId>org.springframework.security</groupId>
                    <artifactId>spring-security-core</artifactId>
