--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
 
         <module>danusys-commons-app</module>
         <module>danusys-commons-auth</module>
+        <module>danusys-commons-auth-token</module>
         <module>danusys-commons-auth-session</module>
         <module>danusys-commons-api</module>
         <module>danusys-commons-ui</module>
@@ -15,7 +16,7 @@
         <module>danusys-commons-mqtt</module>
         <module>danusys-platform</module>
         <module>danusys-drone</module>
-<!--        <module>danusys-smartMetering</module>-->
+        <module>danusys-smartMetering</module>
         <module>danusys-server-netty</module>
         <module>danusys-server-socket</module>
         <module>demo</module>
