--- a/danusys-smartMetering/src/main/resources/application-dev.properties
+++ b/danusys-smartMetering/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 server.port=8086
 
-
+# ??? ?? original DB
 spring.datasource.url=jdbc:mariadb://danuservice2.kro.kr:41036/smartmeter
 spring.datasource.username=root
 spring.datasource.password=danu1234
