--- a/danusys-smartMetering/src/main/resources/application-local.properties
+++ b/danusys-smartMetering/src/main/resources/application-local.properties
@@ -11,7 +11,7 @@ mybatis.mapper-locations=classpath:mapper/sql/*.xml
 mybatis.config-location=classpath:mapper/config/mybatis-config.xml
 
 #DB-config
-spring.datasource.url=jdbc:mariadb://danuservice2.kro.kr:41036/smartMeteringTest
+spring.datasource.url=jdbc:mariadb://danuservice2.kro.kr:41036/smartMeteringtest
 spring.datasource.username=root
 spring.datasource.password=danu1234
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
