application.properties 지자체별 분기

--- a/danusys-platform/src/main/resources/application-yj.properties
+++ b/danusys-platform/src/main/resources/application-yj.properties
@@ -1,9 +1,9 @@
 ########
-###GM###
+###YJ###
 ########
 
-spring.profiles.active=gm
-## TODO : \uAD11\uBA85 \uC2E4\uC11C\uBC84 DB \uC815\uBCF4 \uD544\uC694
+spring.profiles.active=yj
+## TODO : \uC601\uC8FC\uC2DC \uC2E4\uC11C\uBC84 DB \uC815\uBCF4 \uD544\uC694
 ## Database Setting (postgresql)
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://172.20.20.201:5432/iot_platform
@@ -14,20 +14,20 @@ spring.datasource.password=Danu1002!!
 danusys.file.upload.path=/web/upload
 
 ## Map Setting
-danusys.area.code.sig=41210
+danusys.area.code.sig=47210
 
 ## LoginPage Setting
-loginPage.kor.title=\uAD11\uBA85\uC2DC \uC2A4\uB9C8\uD2B8\uC2DC\uD2F0 IoT\uD50C\uB7AB\uD3FC
-loginPage.eng.title=Gwangmyeong Smart City IoT Platform
-loginPage.logo=login_ci_gm.svg
+loginPage.kor.title=\uC601\uC8FC\uC2DC \uC2A4\uB9C8\uD2B8\uC2DC\uD2F0 IoT\uD50C\uB7AB\uD3FC
+loginPage.eng.title=Yeongju Smart City IoT Platform
+loginPage.logo=login_ci_yj.svg
 
 ## HomePage url
 homePage.url=/pages/mntr
 
 ## MainPage
 mainPage.logo=logo_gm.svg
-mainPage.title=\uAD11\uBA85 IoT \uD50C\uB7AB\uD3FC
+mainPage.title=\uC601\uC8FC\uC2DC IoT \uD50C\uB7AB\uD3FC
 
 ## Municipality setting
-municipality.favicon=/images/favicon/favicon_gm.ico
-municipality.name=41210000
+municipality.favicon=/images/favicon/favicon_yj.ico
+municipality.name=47210000
