application.properties 오류 수정

--- a/danusys-platform/src/main/resources/application.properties
+++ b/danusys-platform/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## Server Setting
 server.port=8082
 ## Naming : si/gun - gu
-spring.profiles.include=dev, gm, yj, bs-ng, gj
+spring.profiles.include=dev
 
 ## JPA Setting
 spring.jpa.database=postgresql
@@ -29,12 +29,15 @@ permit.all.page.basic=/js/**,/css/**,/webjars/**,/login/error,/font/**,/images/*
 permit.all.page.add=/auth/generateToken,/loginpage,/loginpage2,/hi234,/auth/**,/permitAllPage,/login/errorTest,/loginpagetest,/
 role.manager.page=/test/**,/hi,/permitManagerPage
 role.admin.page=/hitest2,/tokenTest,/auth/regenerateToken,/test2,/permitAdminPage
+role.menu.page=dashboard-/pages/dashboard/**,inqry-/pages/inqry/**,stats-/pages/config/**,config-/pages/config/**
+
 ## 1000* 60 * 15
 access.token.expire.time= 90000000
 #access.token.expire.time= 60000
 ## 1000 * 60 * 20
 refresh.token.expire.time= 120000000
 #refresh.token.expire.time= 120000
+defaultFailureUrl =/login/errorTest
 
 ## logging Setting
 logging.level.root=info
