--- a/danusys-platform/src/main/resources/application-dev.properties
+++ b/danusys-platform/src/main/resources/application-dev.properties
@@ -31,3 +31,16 @@ mainPage.title=\uAD11\uBA85 IoT \uD50C\uB7AB\uD3FC
 # municipality setting
 municipality.favicon=/images/favicon/favicon_gm.ico
 municipality.name=41210000
+
+#daum map filter
+zuul.routes.dapi-kakao-com.path=/dapi-kakao-com/**
+zuul.routes.dapi-kakao-com.url=http://dapi.kakao.com/
+
+zuul.routes.ssl-daumcdn-net.path=/ssl-daumcdn-net/**
+zuul.routes.ssl-daumcdn-net.url=http://ssl.daumcdn.net/
+
+zuul.routes.t1-daumcdn-net.path=/t1-daumcdn-net/**
+zuul.routes.t1-daumcdn-net.url=http:/t1.daumcdn.net/
+
+zuul.routes.map-daumcdn-net.path=/map-daumcdn-net/**
+zuul.routes.map-daumcdn-net.url=http://map.daumcdn.net/
