개발계 외부 db 접속 추가

--- a/danusys-platform/src/main/resources/application-dev.properties
+++ b/danusys-platform/src/main/resources/application-dev.properties
@@ -7,6 +7,7 @@ spring.profiles.active=test
 ## Database Setting (postgresql)
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://172.20.20.201:5432/iot_platform
+#spring.datasource.url=jdbc:postgresql://danusys.asuscomm.com:5432/iot_platform
 spring.datasource.username=gm
 spring.datasource.password=Danu1002!!
 
