--- a/danusys-drone/src/main/resources/application-dev.properties
+++ b/danusys-drone/src/main/resources/application-dev.properties
@@ -68,7 +68,7 @@ homePage.url=/flying
 loginPage.path=layout/layout_login
 defaultFailureUrl =/
 
-permit.all.page.basic=/js/**,/css/**,/webjars/**,/login/error,/font/**,/images/**,/mntr/**,/resources/**,/api/**,/aepel/**,/favicon.ico,/selectNoSession/**,/file/**,/sound/**,/svg/**,/ui/**,/swagger-ui/**
+permit.all.page.basic=/js/**,/css/**,/webjars/**,/login/error,/font/**,/images/**,/mntr/**,/resources/**,/api/**,/aepel/**,/favicon.ico,/selectNoSession/**,/file/**,/sound/**,/svg/**,/ui/**,/swagger-ui/**,/sse/**,/drone/**,/api/**,/drone/api/**
 
 permit.all.page.add=/auth/generateToken,/auth/**,/permitAllPage,/topic/**,/app/**,/
 
