지자체별 메뉴 분기 추가

--- a/danusys-platform/src/main/resources/application-yj.properties
+++ b/danusys-platform/src/main/resources/application-yj.properties
@@ -3,11 +3,11 @@
 ########
 
 spring.profiles.active=yj
-## TODO : \uC601\uC8FC\uC2DC \uC2E4\uC11C\uBC84 DB \uC815\uBCF4 \uD544\uC694
 ## Database Setting (postgresql)
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://192.168.10.11:5432/iot_platform
-spring.datasource.username=yj
+#spring.datasource.url=jdbc:postgresql://192.168.10.11:5432/iot_platform
+spring.datasource.url=jdbc:postgresql://172.20.14.249:5432/iot_platform
+spring.datasource.username=postgres
 spring.datasource.password=danu1234
 
 ## File Upload Path Setting
