apex charts.js 추가, 사이니지 디스플레이 표출 기능 진행중, 대기오염 기능 추가완료

--- a/danusys-platform/src/main/resources/application-dev.properties
+++ b/danusys-platform/src/main/resources/application-dev.properties
@@ -32,3 +32,6 @@ mainPage.title=\uAD11\uBA85 IoT \uD50C\uB7AB\uD3FC
 # municipality setting
 municipality.favicon=/images/favicon/favicon_gm.ico
 municipality.name=41210000
+
+# airKorea service key
+airkorea.service.key=hniW4O1NEXjGlXt2iG86%2BuASxSvHti1Na1z%2FeaF%2Fz3dyxkolAKkJD8Nx9YqKNoZQ6iH09he6c6o3IX%2BwKqahwA%3D%3D
