--- a/danusys-platform/src/main/resources/application-yj.properties
+++ b/danusys-platform/src/main/resources/application-yj.properties
@@ -31,3 +31,6 @@ mainPage.title=\uC601\uC8FC\uC2DC IoT \uD50C\uB7AB\uD3FC
 ## Municipality setting
 municipality.favicon=/images/favicon/favicon_yj.ico
 municipality.name=47210000
+
+# airKorea service key(TODO : need yeong-ju service key)
+airkorea.service.key=?
