에어코리아 서비스키 properties 추가

--- a/danusys-platform/src/main/resources/application-bs-ng.properties
+++ b/danusys-platform/src/main/resources/application-bs-ng.properties
@@ -31,3 +31,6 @@ mainPage.title=\uBD80\uC0B0 \uB0A8\uAD6C IoT \uD50C\uB7AB\uD3FC
 ## Municipality setting
 municipality.favicon=/images/favicon/favicon_bs_ng.ico
 municipality.name=26290000
+
+# airKorea service key(TODO : need bs-ng service key)
+airkorea.service.key=?
