--- a/danusys-platform/src/main/resources/application-gj.properties
+++ b/danusys-platform/src/main/resources/application-gj.properties
@@ -31,3 +31,6 @@ mainPage.title=\uAE40\uC81C\uC2DC IoT \uD50C\uB7AB\uD3FC
 ## Municipality setting
 municipality.favicon=/images/favicon/favicon_gj.ico
 municipality.name=45210000
+
+# airKorea service key(TODO : need gj service key)
+airkorea.service.key=?
