pom gm-soap 에러 수정

--- a/danusys-commons-api/pom.xml
+++ b/danusys-commons-api/pom.xml
@@ -28,11 +28,11 @@
             <version>${revision}</version>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>com.danusys.web</groupId>
             <artifactId>danusys-commons-gm-soap</artifactId>
             <version>${revision}</version>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
